--- a/.jshintrc
+++ b/.jshintrc
@@ -10,11 +10,11 @@
     "$": true
   },
   "node" : false,
-  "browser" : false,
+  "browser" : true,
   "boss" : true,
   "curly": false,
   "debug": false,
-  "devel": false,
+  "devel": true,
   "eqeqeq": true,
   "evil": true,
   "forin": false,
